...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_form"
                android:layout_width="143dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:hint="@string/name_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView9" />

            <Spinner
                android:id="@+id/spinner_rol"
                android:layout_width="142dp"
                android:layout_height="23dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.921"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagerol" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/constellation_textinputedit"
                android:layout_width="142dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:hint="@string/constellation_form"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView10" />

            <Spinner
                android:id="@+id/spinner_tier"
                android:layout_width="142dp"
                android:layout_height="23dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.921"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagetier" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/atk_textInputEditText"
                android:layout_width="143dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:hint="@string/atk_form"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:background="@android:drawable/ic_menu_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_arm"
                android:layout_width="142dp"
                android:layout_height="23dp"
                android:layout_marginTop="24dp"
                android:background="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_textInputEdit" />

            <Spinner
                android:id="@+id/spinner_element"
                android:layout_width="142dp"
                android:layout_height="23dp"
                android:layout_marginTop="4dp"
                android:background="@color/purple_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_elements" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hp_textinputEditText"
                android:layout_width="142dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:hint="@string/hp_form"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/def_textInputEditText"
                android:layout_width="143dp"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:hint="@string/def_form"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.917"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView13" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="844dp"
                android:text="@string/save_form"
                app:layout_constraintStart_toStartOf="parent"
...
                android:layout_marginEnd="68dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/atk_textInputEditText"
                app:srcCompat="@drawable/defensa" />

            <Switch
                android:id="@+id/switch_equip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/switch_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/date_form"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagedate" />

            <ImageView
                android:id="@+id/imagedate"
                android:layout_width="35dp"
                android:layout_height="32dp"
                android:layout_marginTop="420dp"
...
